solución al filtro de owner y categoria
